<resources>
    <string name="app_name">Drawing app</string>
    <string name="grid_list_switch">grid_list_switch</string>
    <string name="directory">drawings</string>
    <string name="your_drawings">Your drawings:</string>
    <string name="your_drawing">One of your drawings</string>
    <string name="edit_drawing">drawing</string>
    <string name="position_of_item">position_of_item</string>

    <!--code menu indicator-->
    <string name="code_menu">&#8942;</string>

    <!--actions-->
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="fill">Fill</string>
    <string name="pipette">Pipette</string>
    <string name="rectangle">Rectangle</string>
    <string name="oval">Oval</string>
    <string name="save">Save</string>
    <string name="color">Current color</string>

    <!--on save instance states-->
    <string name="is_list_mode">is_list_mode</string>
    <string name="save_drawing_view">save_drawing_view</string>

    <!--messages-->
    <string name="size_eraser_prompt">Choose size of eraser.</string>
    <string name="size_brush_prompt">Choose size of brush.</string>
    <string name="save_dialog_title">Saving drawing</string>
    <string name="save_dialog_prompt">Enter name of the drawing.</string>
    <string name="before_save_dialog">Saving...</string>

    <string name="jpg_format">%s.jpg</string>
    <string name="name">Name: %s</string>
    <string name="last_modified">Last modified: %s</string>

    <string name="delete_question">Are you sure you want to delete this picture?</string>
    <string name="rename_question">Rename drawing:</string>

    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="success_saved_drawing">The drawing was saved successfully.</string>
    <string name="success_delete_drawing">The drawing was deleted successfully.</string>
    <string name="not_success_delete_drawing">The drawing was not deleted successfully.</string>
    <string name="success_rename_drawing">The drawing was renamed successfully.</string>
    <string name="not_success_rename_drawing">The drawing was not renamed successfully.</string>

    <!--color picker-->
    <string name="r">R: %d</string>
    <string name="g">G: %d</string>
    <string name="b">B: %d</string>

    <string name="h">H: %.2f</string>
    <string name="s">S: %.2f</string>
    <string name="v">V: %.2f</string>

    <string name="color_picker_dialog_title">Choose a color!</string>
    <string name="dialog">dialog</string>
</resources>
