<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fon"
    tools:context=".activities.DrawingScreen">

    <LinearLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/brush"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/grey"
            android:contentDescription="@string/brush"
            android:paddingLeft="@dimen/small_size"
            android:paddingRight="@dimen/small_size"
            app:srcCompat="@drawable/ic_brush_black_24dp" />

        <ImageButton
            android:id="@+id/eraser"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/grey"
            android:contentDescription="@string/erase"
            android:paddingLeft="@dimen/small_size"
            android:paddingRight="@dimen/small_size"
            app:srcCompat="@drawable/ic_temp_24dp" />

        <ImageButton
            android:id="@+id/pipette"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/grey"
            android:contentDescription="@string/pipette"
            android:paddingLeft="@dimen/small_size"
            android:paddingRight="@dimen/small_size"
            app:srcCompat="@drawable/ic_colorize_black_24dp" />

        <ImageButton
            android:id="@+id/rectangle"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/grey"
            android:contentDescription="@string/rectangle"
            android:paddingLeft="@dimen/small_size"
            android:paddingRight="@dimen/small_size"
            app:srcCompat="@drawable/ic_rectangle_black_24dp" />

        <ImageButton
            android:id="@+id/oval"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/grey"
            android:contentDescription="@string/oval"
            android:paddingLeft="@dimen/small_size"
            android:paddingRight="@dimen/small_size"
            app:srcCompat="@drawable/ic_circle_24dp" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:background="@color/grey"
            android:contentDescription="@string/save"
            android:paddingLeft="@dimen/small_size"
            android:paddingRight="@dimen/small_size"
            app:srcCompat="@drawable/ic_save_black_24dp" />

        <ImageButton
            android:id="@+id/currentColor"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:contentDescription="@string/color" />

    </LinearLayout>

    <com.example.tsvetelinastoyanova.drawingapp.drawing.DrawingView
        android:id="@+id/drawing"
        android:layout_width="fill_parent"
        android:layout_height="450sp"
        android:layout_below="@+id/action_bar"
        android:layout_marginBottom="3dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="15dp"
        android:background="@color/white" />

</RelativeLayout>